--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,7 @@
     --default-font-cursive: "Great Vibes", "cursive";
     --font-cursive: "Great Vibes", "cursive";
 
-    
+
 
     --color-background: #FAF2EF;
     --color-primary: #131410;
@@ -22,6 +22,7 @@ body {
     width: 100%;
     height: 100%;
     color: var(--color-primary);
+
 }
 
 body {
@@ -29,4 +30,13 @@ body {
     background-color: var(--color-background);
     background-repeat: repeat;
     background-size: 294px 235px;
+    background-attachment: fixed;
+}
+
+
+.falling-leaf {
+    position: fixed;
+    top: 0;
+    z-index: -999;
+    opacity: 0;
 }
