--- a/src/components/Page1.astro
+++ b/src/components/Page1.astro
@@ -4,18 +4,6 @@ import Ornament1 from "../assets/ornament-1.gif";
 import Ornament2 from "../assets/ornament-2.gif";
 ---
 
-<style>
-    #textURInvited {
-        transform: translate(0, 198.5px);
-        opacity: 0;
-    }
-    #btnOpenInvitation {
-              transform: translate(0, -198.5px);
-        opacity: 0;
-    }
-
-</style>
-
 <div class="h-screen w-full flex items-center justify-center">
     <div>
         <h1 class="text-lg text-center mb-20 z-0" id="textURInvited">YOU ARE INVITED TO</h1>
@@ -32,12 +20,12 @@ import Ornament2 from "../assets/ornament-2.gif";
             </svg>
 
             <!-- <div class="absolute top-16"> -->
-            <h6 class="absolute top-16 left-8 text-lg">THE WEDDING OF</h6>
+            <h6 class="absolute top-16 left-8 text-lg" id="textWedding">THE WEDDING OF</h6>
             <div class="absolute top-24 w-5/6 left-2">
                 <div class="flex justify-between items-center">
-                    <h1 class="font-cursive text-5xl font-bold">Lia</h1>
-                    <h6>&</h6>
-                    <h1 class="font-cursive text-5xl font-bold">Aldan</h1>
+                    <h1 class="font-cursive text-5xl font-bold" id="textLia">Lia</h1>
+                    <h6 id="textDan">&</h6>
+                    <h1 class="font-cursive text-5xl font-bold" id="textAldan">Aldan</h1>
                 </div>
             </div>
             <Image
@@ -62,6 +50,57 @@ import Ornament2 from "../assets/ornament-2.gif";
 <script>
     import { gsap } from "gsap";
     let tl = gsap.timeline();
-    tl.to("#textURInvited", { y: 0, opacity: 1, duration: 2 });
-    tl.to("#btnOpenInvitation", { y: 0, opacity: 1, duration: 2 });
+    tl.fromTo("#svgRoundBg", {opacity: 0}, { opacity: 1, duration: 5 }, 0);
+    tl.fromTo(
+        "#textWedding",
+        { opacity: 0, y: "+=40" },
+        { opacity: 1, y: 0, duration: 1.5 },
+        1.5
+    );
+    tl.fromTo(
+        "#textLia, #textAldan, #textDan",
+        { opacity: 0, y: "+=40" },
+        { opacity: 1, y: 0, duration: 1.5, stagger: 0.5 },
+        2.5
+    );
+    tl.fromTo(
+        "#textURInvited",
+        { y: "+=198.5", opacity: 0 },
+        { y: 0, opacity: 1, duration: 2 },
+        3.5
+    );
+    tl.fromTo(
+        "#btnOpenInvitation",
+        { y: "-=198.5", opacity: 0 },
+        { y: 0, opacity: 1, duration: 2 },
+        4
+    );
+
+    tl.fromTo(
+        "#imgOrnament2",
+        { x: "+=40", rotation: "+=20", opacity: 0 }, 
+        { x: 0, rotation: -5, transformOrigin: "80% 100%", opacity: 1, duration: 2.5, ease: "power2.out" },
+        3
+    );
+    tl.fromTo(
+        "#imgOrnament2",
+        { transformOrigin: "80% 100%", rotation: -5 }, 
+        {
+            rotation: 5,
+            transformOrigin: "80% 100%",
+            duration: 2.5,
+            repeat: -1,
+            yoyo: true,
+            yoyoEase: "none",
+            ease: "none"
+        },
+        5
+    );
+    tl.fromTo(
+        "#imgOrnament1",
+        { opacity: 0, y: "+=40" },
+        { opacity: 1, y: 0, duration: 1.5, stagger: 0.5 },
+        4
+    );
+
 </script>
