added text page 3

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,10 +2,11 @@
 import Layout from "../layouts/Layout.astro";
 import Page1 from "../components/Page1.astro";
 import Page2 from "../components/Page2.astro";
+import Page3 from "../components/Page3.astro";
 ---
 
 <Layout title="#AlDanLiaMenujuHalal2025">
     <Page1></Page1>
-
     <Page2></Page2>
+    <Page3></Page3>
 </Layout>
