--- a/src/components/Page1.astro
+++ b/src/components/Page1.astro
@@ -4,7 +4,7 @@ import Ornament1 from "../assets/ornament-1.gif";
 import Ornament2 from "../assets/ornament-2.gif";
 ---
 
-<div class="h-screen w-full flex items-center justify-center">
+<div id="Page1" class="h-screen w-full flex items-center justify-center overflow-hidden">
     <div>
         <h1 class="text-lg text-center mb-20 z-0" id="textURInvited">YOU ARE INVITED TO</h1>
         <div class="flex items-center justify-center relative w-64 z-100">
@@ -49,7 +49,14 @@ import Ornament2 from "../assets/ornament-2.gif";
 
 <script>
     import { gsap } from "gsap";
-    let tl = gsap.timeline();
+    import { ScrollTrigger } from "gsap/ScrollTrigger";
+    gsap.registerPlugin(ScrollTrigger);
+    let tl = gsap.timeline({
+        scrollTrigger: {
+            trigger: "#Page1",
+            toggleActions: "play pause resume reset",
+        }
+    });
     tl.fromTo("#svgRoundBg", {opacity: 0}, { opacity: 1, duration: 5 }, 0);
     tl.fromTo(
         "#textWedding",
@@ -79,13 +86,15 @@ import Ornament2 from "../assets/ornament-2.gif";
     tl.fromTo(
         "#imgOrnament2",
         { x: "+=40", rotation: "+=20", opacity: 0 }, 
-        { x: 0, rotation: -5, transformOrigin: "80% 100%", opacity: 1, duration: 2.5, ease: "power2.out" },
+        { x: 0, rotation: -5, transformOrigin: "80% 100%", opacity: 1, duration: 2.5, ease: "power2.out",  },
         3
     );
+
     tl.fromTo(
         "#imgOrnament2",
         { transformOrigin: "80% 100%", rotation: -5 }, 
         {
+            // display: "block",
             rotation: 5,
             transformOrigin: "80% 100%",
             duration: 2.5,
@@ -94,8 +103,9 @@ import Ornament2 from "../assets/ornament-2.gif";
             yoyoEase: "none",
             ease: "none"
         },
-        5
+        6
     );
+
     tl.fromTo(
         "#imgOrnament1",
         { opacity: 0, y: "+=40" },
