--- a/src/components/Page2.astro
+++ b/src/components/Page2.astro
@@ -5,7 +5,7 @@ import Ornament4 from "../assets/ornament-4.gif";
 
 import Ornament1 from "../assets/ornament-1.gif";
 ---
-<div class="h-screen w-full flex items-center justify-center">
+<div class="h-screen w-full flex items-center justify-center overflow-hidden">
     <div class="flex items-center justify-center relative w-80 z-100">
         <svg
             xmlns="http://www.w3.org/2000/svg"
