--- a/src/components/Page3.astro
+++ b/src/components/Page3.astro
@@ -3,7 +3,8 @@ import { Image } from "astro:assets";
 import Salam from "../assets/salam.svg";
 ---
 
-<div class="h-screen w-full flex items-center justify-center overflow-hidden">
+
+<section id="Page3" class="h-screen w-full flex items-center justify-center overflow-hidden section">
     <div class="w-5/6">
         <Image src={Salam} alt="assalamu'alaikum" class="-mb-5 max-h-45"/>
         <p class="text-lg/5 text-center">
@@ -23,4 +24,4 @@ import Salam from "../assets/salam.svg";
             Bapak&nbsp;Daniel&nbsp;Hermansyah,&nbsp;S.H.,&nbsp;M.Si. dan Ibu&nbsp;Dra.&nbsp;Linda&nbsp;Rita  
         </p>
     </div>
-</div>
+</section>
