--- a/src/components/Page2.astro
+++ b/src/components/Page2.astro
@@ -5,7 +5,7 @@ import Ornament4 from "../assets/ornament-4.gif";
 
 import Ornament1 from "../assets/ornament-1.gif";
 ---
-<div class="h-screen w-full flex items-center justify-center overflow-hidden">
+<section id="Page2" class="h-screen w-full flex items-center justify-center overflow-hidden section">
     <div class="flex items-center justify-center relative w-80 z-100">
         <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -45,4 +45,17 @@ import Ornament1 from "../assets/ornament-1.gif";
             <Image src={Ornament1} alt="ornament-1" class="w-7/10" />
         </div>
     </div>
-</div>
+</section>
+<script>
+    import { gsap } from "gsap";
+    import { ScrollTrigger } from "gsap/ScrollTrigger";
+
+//     gsap.registerPlugin(ScrollTrigger);
+//    let _trig2 = ScrollTrigger.create({
+//         trigger: "#Page2",
+//         pin: true,
+//         markers: true,
+//     });
+
+
+</script>
