--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,7 +22,7 @@ body {
     width: 100%;
     height: 100%;
     color: var(--color-primary);
-
+    touch-action: none;
 }
 
 body {
@@ -31,6 +31,19 @@ body {
     background-repeat: repeat;
     background-size: 294px 235px;
     background-attachment: fixed;
+}
+
+html,
+body {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+
+    height: 300vh;
+}
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+    display: none;
 }
 
 
