--- a/src/components/Page2.astro
+++ b/src/components/Page2.astro
@@ -13,6 +13,7 @@ import Ornament1 from "../assets/ornament-1.gif";
             viewBox="0 0 204 192"
             class="fill-quinary rotate-270"
             preserveAspectRatio="none"
+            id="svgPage2Bg"
         >
             <path
                 d="M195.507 15.5715C206.818 33.1668 193.622 69.3001 190.166 101.663C186.71 134.34 193.308 163.561 181.996 178.014C170.685 192.153 141.464 191.525 114.443 189.326C87.1072 187.44 62.2852 183.67 40.6052 169.531C19.2395 155.077 1.6441 130.255 0.0730908 103.862C-1.18372 77.4694 13.898 49.5054 35.2638 31.91C56.6296 14.0004 84.5936 6.45958 116.328 2.37494C148.063 -1.70969 184.196 -2.3381 195.507 15.5715Z"
@@ -20,10 +21,10 @@ import Ornament1 from "../assets/ornament-1.gif";
             ></path>
         </svg>
         <div class="absolute w-9/12 text-center">
-            <p class="text-base/5">
+            <p class="text-base/5" id="Ayat1">
                 Di antara tanda-tanda (kebesaran)-Nya ialah bahwa Dia menciptakan pasangan-pasangan untukmu dari (jenis) dirimu sendiri agar kamu merasa tenteram kepadanya. Dia menjadikan di antaramu rasa cinta dan kasih sayang. Sesungguhnya pada yang demikian itu benar-benar terdapat tanda-tanda (kebesaran Allah) bagi kaum yang berpikir.
             </p>
-            <h6 class="font-bold">(Q.S. Ar-Rum: 21)</h6>
+            <h6 class="font-bold" id="Ayat2">(Q.S. Ar-Rum: 21)</h6>
         </div>
         <div class="absolute -top-9 flex justify-center">
             <!-- <div class="relative"> -->
@@ -32,17 +33,19 @@ import Ornament1 from "../assets/ornament-1.gif";
                     alt="ornament-4"
                     class="w-9/25 "
                     style="transform: translate(16px, 0)"
+                    id="imgOrnament3Page2Left"
                 />
                 <Image
                     src={Ornament3}
                     alt="ornament-3"
                     class="w-9/25"  
                     style="transform: translate(-16px, 0)"
+                    id="imgOrnament3Page2Right"
                 />
             <!-- </div> -->
         </div>
         <div class="absolute top-62 flex justify-center">
-            <Image src={Ornament1} alt="ornament-1" class="w-7/10" />
+            <Image src={Ornament1} alt="ornament-1" class="w-7/10" id="imgOrnament1Page2"/>
         </div>
     </div>
 </section>
@@ -50,12 +53,59 @@ import Ornament1 from "../assets/ornament-1.gif";
     import { gsap } from "gsap";
     import { ScrollTrigger } from "gsap/ScrollTrigger";
 
-//     gsap.registerPlugin(ScrollTrigger);
-//    let _trig2 = ScrollTrigger.create({
-//         trigger: "#Page2",
-//         pin: true,
-//         markers: true,
-//     });
+    gsap.registerPlugin(ScrollTrigger);
+
+    let tl = gsap.timeline({
+        scrollTrigger: {
+            trigger: "#Page2",
+             toggleActions: "play pause resume reset",
+        }
+    });
+
+    tl.fromTo(
+        "#svgPage2Bg",
+        { opacity: 0 },
+        { opacity: 1, duration: 5 },
+        0
+    );
+
+    tl.fromTo(
+        "#Ayat1",
+        { opacity: 0, y: "+=40" },
+        { opacity: 1, y: 0, duration: 1.5 },
+        1.5
+    );
+
+
+    tl.fromTo(
+        "#Ayat2",
+        { opacity: 0, y: "+=40" },
+        { opacity: 1, y: 0, duration: 1.5 },
+        2.5
+    );
+
+    tl.fromTo(
+        "#imgOrnament3Page2Left",
+        { opacity: 0, x: "+=20" },
+        { opacity: 1, x: 0, duration: 1.5 },
+        3.5
+    );
+
+    tl.fromTo(
+        "#imgOrnament3Page2Right",
+        { opacity: 0, x: "-=20" },
+        { opacity: 1, x: 0, duration: 1.5 },
+        3.5
+    );
+
+    tl.fromTo(
+        "#imgOrnament1Page2",
+        { opacity: 0, y: "+=40" },
+        { opacity: 1, y: 0, duration: 1.5, stagger: 0.5 },
+        4
+    );
+
+
 
 
 </script>
