--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,14 @@ import Layout from "../layouts/Layout.astro";
 import Page1 from "../components/Page1.astro";
 import Page2 from "../components/Page2.astro";
 import Page3 from "../components/Page3.astro";
+import Page4 from "../components/Page4.astro";
+import Page5 from "../components/Page5.astro";
 ---
 
 <Layout title="#AlDanLiaMenujuHalal2025">
     <Page1></Page1>
     <Page2></Page2>
     <Page3></Page3>
+    <Page4></Page4>
+    <Page5></Page5>
 </Layout>
