--- a/src/components/Page4.astro
+++ b/src/components/Page4.astro
@@ -2,8 +2,94 @@
 
 ---
 
-<section id="Page4" class="h-screen w-full flex justify-center overflow-hidden section">
-    <p>Page 4</p>
+<section
+    id="Page4"
+    class="h-screen w-full flex justify-center overflow-hidden section"
+>
+    <div class="w-xl relative flex items-center">
+        <div class="max-w-5/6 mx-auto">
+            <div class="text-center">
+                <h6 class="page4TextA">akad nikah</h6>
+                <h1 class="font-cursive text-3xl page4TextA">Jumat, 3 Oktober 2025</h1>
+                <p class="font-bold mb-3 page4TextA">09:00 &mdash; selesai</p>
+                <p class="font-bold page4TextA">Kediaman Mempelai Perempuan</p>
+                <p class="page4TextA">
+                    Komplek Persada, Jl. Piranha, Blok F1 No. 24 Indralaya
+                    Indah, Indralaya, Kab, Ogan Ilir
+                </p>
+                <div class="my-3 page4TextA">
+                    <a href="https://maps.app.goo.gl/bE9a7zTTdaT4WWSM9" target="_blank" class="border border-primary hover:bg-primary [&>svg]:fill-primary hover:text-white hover:[&>svg]:fill-white text-primary py-1 px-3 rounded-full">
+                        <svg class="btn-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.0.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M576 112C576 100.9 570.3 90.6 560.8 84.8C551.3 79 539.6 78.4 529.7 83.4L413.5 141.5L234.1 81.6C226 78.9 217.3 79.5 209.7 83.3L81.7 147.3C70.8 152.8 64 163.9 64 176L64 528C64 539.1 69.7 549.4 79.2 555.2C88.7 561 100.4 561.6 110.3 556.6L226.4 498.5L399.7 556.3C395.4 549.9 391.2 543.2 387.1 536.4C376.1 518.1 365.2 497.1 357.1 474.6L255.9 440.9L255.9 156.4L383.9 199.1L383.9 298.4C414.9 262.6 460.9 240 511.9 240C534.5 240 556.1 244.4 575.9 252.5L576 112zM512 288C445.7 288 392 340.8 392 405.9C392 474.8 456.1 556.3 490.6 595.2C502.2 608.2 521.9 608.2 533.5 595.2C568 556.3 632.1 474.8 632.1 405.9C632.1 340.8 578.4 288 512.1 288zM472 408C472 385.9 489.9 368 512 368C534.1 368 552 385.9 552 408C552 430.1 534.1 448 512 448C489.9 448 472 430.1 472 408z"/></svg>
+                        Google Maps
+                    </a>
+                </div>
+            </div>
+
+            <hr id="borderPage4" class="border-t-1 border-primary my-10">
+
+            <div class="text-center">
+                <h6 class="page4TextB">resepsi pernikahan</h6>
+                <h1 class="font-cursive text-3xl page4TextB">Minggu, 5 Oktober 2025</h1>
+                <p class="font-bold mb-3 page4TextB">10:00 &mdash; selesai</p>
+                <p class="font-bold page4TextB">Gedung Serbaguna Tiara Puspa</p>
+                <p class="page4TextB">
+                    Jl. Supersemar, Pipa Jaya, Kecamatan Kemuning, Kota
+                    Palembang
+                </p>
+
+                <div class="my-3 page4TextB">
+                    <a href="https://maps.app.goo.gl/Vvnodd72GgLQarsw6" target="_blank" class="border border-primary hover:bg-primary [&>svg]:fill-primary hover:text-white hover:[&>svg]:fill-white text-primary py-1 px-3 rounded-full">
+                        <svg class="btn-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.0.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M576 112C576 100.9 570.3 90.6 560.8 84.8C551.3 79 539.6 78.4 529.7 83.4L413.5 141.5L234.1 81.6C226 78.9 217.3 79.5 209.7 83.3L81.7 147.3C70.8 152.8 64 163.9 64 176L64 528C64 539.1 69.7 549.4 79.2 555.2C88.7 561 100.4 561.6 110.3 556.6L226.4 498.5L399.7 556.3C395.4 549.9 391.2 543.2 387.1 536.4C376.1 518.1 365.2 497.1 357.1 474.6L255.9 440.9L255.9 156.4L383.9 199.1L383.9 298.4C414.9 262.6 460.9 240 511.9 240C534.5 240 556.1 244.4 575.9 252.5L576 112zM512 288C445.7 288 392 340.8 392 405.9C392 474.8 456.1 556.3 490.6 595.2C502.2 608.2 521.9 608.2 533.5 595.2C568 556.3 632.1 474.8 632.1 405.9C632.1 340.8 578.4 288 512.1 288zM472 408C472 385.9 489.9 368 512 368C534.1 368 552 385.9 552 408C552 430.1 534.1 448 512 448C489.9 448 472 430.1 472 408z"/></svg>
+                        Google Maps
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 
-<script></script>
+<script>
+        import { gsap } from "gsap";
+    import { ScrollTrigger } from "gsap/ScrollTrigger";
+
+    gsap.registerPlugin(ScrollTrigger);
+
+    let tl = gsap.timeline({
+        scrollTrigger: {
+            trigger: "#Page4",
+        },
+    });
+
+    tl.fromTo(
+        "#borderPage4",
+        { scaleX: 0, scaleY: 1, opacity: 0 },
+        { scaleX: 1, scaleY: 1, opacity: 1, duration: 5 },
+        0
+    );
+
+    tl.fromTo(
+        ".page4TextA",
+        { opacity: 0, y: "+=40" },
+        {
+            opacity: 1,
+            y: 0,
+            duration: 1.5,
+            stagger: 0.5,
+        },
+        1.5
+    );
+
+        tl.fromTo(
+        ".page4TextB",
+        { opacity: 0, y: "+=40" },
+        {
+            opacity: 1,
+            y: 0,
+            duration: 1.5,
+            stagger: 0.5,
+        },
+        2.5
+    );
+
+
+</script>
